<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">基于android的手机防火墙</string>
    <string name="failed_to_connect_internet">无法连接到服务器</string>
    <string name="update_tips">更新提示</string>
    <string name="update_description">发现新版本，是否更新? 新版内容如下:\n</string>
    <string name="update">更新</string>
    <string name="cancel">取消</string>
    <string name="failed_to_download">下载失败</string>
    <string name="success_to_download">下载成功,即将开始安装..</string>
    <string name="failed_to_install_new_version">安装新版本失败:文件未找到</string>
    <string name="json_parse_error">Json数据解析错误</string>
    <string name="download_tips">正在玩命下载..</string>
    <string name="download">下载</string>
    <string name="phone_security">手机信息</string>
    <string name="msg_safe">通讯安全</string>
    <string name="software_manager">软件管家</string>
    <string name="process_manager">进程管理</string>
    <string name="traffic_stats">流量统计</string>
    <string name="anti_virus">病毒查杀</string>
    <string name="clean_cache">清理缓存</string>
    <string name="phone_info">手机信息</string>
    <string name="packa">数据抓包</string>
    <string name="packb">数据抓包详情</string>
    <string name="porta">端口扫描</string>
    <string name="wifia">WIFI扫描</string>
    <string name="wifib">WIFI连接</string>
    <string name="wific">WIFI详细</string>
    <string name="advanced_tools">高级工具</string>
    <string name="setting">设置中心</string>
    <string name="title_setting_password">请先设置密码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_password_again">请再次输入密码</string>
    <string name="ok">确定</string>
    <string name="bell_tips">请长按设置按钮5秒钟，听到语音提示后点击下一步进行操作！</string>
    <string name="device_id">设备ID:</string>
    <string name="wifi_ssid">WIFI-SSID:</string>
    <string name="wifi_pwd">WIFI密码:</string>
    <string name="next">下一步</string>
    <string name="sure">确定</string>
    <string name="input_pwd_hint">请输入密码</string>
    <string name="wait_moment">操作进行中，请稍后</string>
    <string name="password_can_not_be_empty">密码不能为空</string>
    <string name="two_password_is_not_consistent">两次输入密码不一致</string>
    <string name="title_input_password">请输入解锁密码</string>
    <string name="password_is_not_true">密码不正确</string>
    <string name="please_input_phone_number">请输入手机号码</string>
    <string name="_11_phone_number">11位手机号码</string>
    <string name="setting_finish">设置完毕</string>
    <string name="select_from_contact">从联系人中选择</string>
    <string name="contacts_activity_title">请选择</string>
    <string name="tips">提示</string>
    <string name="loding_tips">正在玩命加载中...</string>
    <string name="title_phone_safe_setting1">设置安全号码</string>
    <string name="auto_update">自动更新</string>
    <string name="summary_auto_update">开启后，每次运行程序会自动检测更新</string>
    <string name="manually_add">手动添加</string>
    <string name="add_from_contacts">从联系人添加</string>
    <string name="add_from_phone_history">从通话记录添加</string>
    <string name="add_from_sms_history">从短信记录添加</string>
    <string name="hint_manually_add_phone_number">请输入要屏蔽的手机号码</string>
    <string name="call_intercept">通话拦截</string>
    <string name="sms_intercept">短信拦截</string>
    <string name="phone_number_can_not_be_empty">号码不能为空</string>
    <string name="tips_intercept_is_not_selected">添加未生效，您没选择任何拦截</string>
    <string name="text_msg_safe_no_data">暂无数据，请点击菜单添加</string>
    <string name="no_more_data">没有更多数据</string>
    <string name="whether_delete_phone_number">是否要删除号码</string>
    <string name="success_to_delete">删除成功</string>
    <string name="failed_to_delete">删除失败</string>
    <string name="failed_to_add">添加失败</string>
    <string name="success_to_add">添加成功</string>
    <string name="unknown">未知</string>
    <string name="title_blacklist_intercept">黑名单拦截</string>
    <string name="summary_blacklist_intercept">开启后，将收不到通讯安全中黑名单号码的电话或短信</string>
    <string name="phone_location_query">电话归属地查询</string>
    <string name="summary_phone_location_query">支持号码</string>
    <string name="hint_please_input_phone_number">请输入电话号码</string>
    <string name="query">查询</string>
    <string name="tips_failed_to_query_phone_location">未查询到归属地，请检查号码是否正确</string>
    <string name="title_show_incoming_location">来电归属地显示</string>
    <string name="summary_show_incoming_location">开启后，将在收到来电时，显示电话的归属地</string>
    <string name="contacts_sms_backup">联系人短信备份</string>
    <string name="port">端口扫描</string>
    <string name="port1">端口ip协议扫描</string>
    <string name="pack">数据抓包</string>
    <string name="pack1">数据抓包功能</string>
    <string name="summary_contacts_sms_backup">支持联系人、短信单独备份</string>
    <string name="backup_contacts">备份联系人</string>
    <string name="backup_sms">备份短信</string>
    <string name="message_backup">请选择需要备份的内容</string>
    <string name="tips_sdcard_not_found">未检测到SD卡</string>
    <string name="tips_no_data_to_backup">没有找到数据可以备份</string>
    <string name="file_not_found">文件未找到</string>
    <string name="tips_no_data_to_restore">没有数据可以还原</string>
    <string name="failed_to_restore">还原失败</string>
    <string name="contacts_sms_restore">联系人短信还原</string>
    <string name="summary_contacts_sms_restore">支持联系人、短信还原</string>
    <string name="title_on_restore">请选择需要还原的类型</string>
    <string name="title_restore_activity" translatable="false">请选择要还原的文件</string>
    <string name="contacts">联系人</string>
    <string name="sms">短信</string>
    <string name="failed_to_save_file">保存文件失败</string>
    <string name="success_to_restore">还原成功</string>
    <string name="success_to_backup">备份成功</string>
    <string name="failed_to_backup">备份失败</string>
    <string name="delete">删除</string>
    <string name="rom_free_space">ROM可用空间:</string>
    <string name="sd_card_free_space">SD卡可用空间:</string>
    <string name="user_app">用户应用</string>
    <string name="system_app">系统应用</string>
    <string name="uninstall">卸载</string>
    <string name="select_all">全选</string>
    <string name="cancel_all">取消选择</string>
    <string name="message_uninstall_app">是否要卸载选中的应用?</string>
    <string name="total_memory">总内存:</string>
    <string name="free_memory">可用内存:</string>
    <string name="kill_process">关闭进程</string>
    <string name="message_kill_process">是否关闭选中的进程?</string>
    <string name="tips_kill_process">关闭了%1$d个进程,共释放%2$s内存</string>
    <string name="app_lock">程序锁</string>
    <string name="wifi">wifi扫描</string>
    <string name="wifi1">wifi情况查询与连接</string>
    <string name="summary_app_lock">加锁的程序，运行前需要输入密码</string>
    <string name="unlocked">未加锁</string>
    <string name="locked">已加锁</string>
    <string name="reset_password">重置密码</string>
    <string name="total_traffic_stats_sum">总计流量(%1$s)</string>
    <string name="traffic_stats_upload_download">↑%1$s ↓%2$s</string>
    <string name="mobile_traffic_stats_sum">手机流量(%1$s)</string>
    <string name="no_virus">扫描完成，未发现危险</string>
    <string name="found_virus">发现%1$d个危险</string>
    <string name="clear_right_now">立即清除</string>
    <string name="no_cache_data">没有缓存数据</string>
    <string name="tips_clear_cache_completed">清理完成，总共为您节省了%1$s存储空间</string>
    <string name="tips_failed_to_clear">清理失败</string>
    <string name="no_permission">没有权限</string>
    <string name="title_location">获取位置</string>
    <string name="message_location">手机安全中的GPS定位需要此权限</string>
    <string name="explanation_message">如果不授予此权限，应用将无法正常运行</string>
    <string name="title_storage">读写SD卡</string>
    <string name="message_storage">自动更新、短信联系人备份还原等服务需要读写SD卡</string>
    <string name="title_contacts">读写联系人</string>
    <string name="message_contacts">备份还原联系人时需要此权限</string>
    <string name="title_system_alert_window">悬浮窗口</string>
    <string name="message_system_alert_window">显示来电归属地气泡需要此权限</string>
    <string name="tips_thank_you_for_your_use">感谢您的使用</string>
    <string name="title_sms">读写发送短信</string>
    <string name="message_sms">短信备份还原和GPS追踪需要此权限</string>
    <string name="title_phone">电话权限</string>
    <string name="message_phone">读取通话记录、拦截电话需要此权限</string>
    <string name="tips_system_version_check">检测到您当前系统版本为:</string>
    <string name="tips_msg_safe_recommend_use_system_service">。推荐您使用联系人、短信自带的黑名单功能</string>
    <string name="tips_restore_recommend_to_use_system_service">。推荐您使用短信自带的还原功能</string>
    <string name="tips_clear_cache_recommend_use_system_service">。推荐您使用系统自带的清除缓存服务。</string>
</resources>