<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/wifi_ssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:text="@string/wifi_ssid"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/wifi_ssid_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@id/wifi_ssid"
        android:padding="10dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/wifi_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_ssid"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:text="@string/wifi_pwd"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/wifi_pwd_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_ssid_tv"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@id/wifi_pwd"
        android:hint="@string/input_pwd_hint"
        android:padding="10dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/connect_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:text="连接WIFI"
        android:textSize="16sp" >
    </Button>

</RelativeLayout>